# Hualien-Recall-Vote-Viz

./: .dockerignore  .env  Dockerfile  README.md  dashboard.py  docker-compose.yml  extract_polling_station_id.py  map_data_presentaiton.py  pyproject.toml  utils.py
data/: combined_data.geoparquet  legislator_polling_results_cleaned.csv  polling_station_area.csv  polling_stations.csv  polling_stations.json  polling_stations_with_coordinates.csv  polling_stations_with_coordinates.json  recall_vote_data_detailed.csv  recall_vote_data_detailed.json  recall_vote_data_detailed_with_ids.csv
data_processing/: 1_recall_vote_data_parsing.py  2_polling_station_parser.py  3_polling_station_village.ipynb  3_polling_station_village_area_append.py  4_merge_geo_and_voting_data.ipynb  4_merge_geo_and_voting_data.py  5_read_legislator_polling_results.ipynb
maps/: geomap_clean.ipynb  hualien_division.geojson  hualien_division.geoparquet  hualien_division_area_village.geoparquet  hualien_division_boundary.geojson  hualien_division_boundary.geoparquet
