[project]
name = "recall-vote-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "dash>=3.1.1",
    "dash-bootstrap-components>=2.0.3",
    "geopandas[all]>=1.1.1",
    "googlemaps>=4.10.0",
    "jupyter>=1.1.1",
    "overturemaps>=0.15.0",
    "pandas[computation,excel,parquet,performance,plot]>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
]
